// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container 1`] = `
.c0 {
  width: 100%;
  min-height: 100vh;
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 15px;
  background-image: linear-gradient(315deg,#f6f6f6 0%,#e9e9e9 74%);
}

<div
  className="c0"
/>
`;

exports[`Loader 1`] = `
.c0 {
  font-size: 10px;
}

<div
  className="c0"
/>
`;

exports[`Page 1`] = `
.c0 {
  width: 100%;
  margin: 0 auto;
}

<div
  className="c0"
/>
`;

exports[`Wrapper 1`] = `
.c0 {
  background: #fff;
  border-radius: 10px;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 30px;
}

<div
  className="c0"
/>
`;
